<resources>
    <string name="app_name">Neco_GPS_Tracker</string>
    <string name="home">Home</string>
    <string name="tracks">Tracks</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="update_time">Update time</string>
    <string name="update_time_summary">Location update time.</string>
    <string name="update_color">Track color</string>
    <string name="update_color_of_track_summary">Choose track color</string>
    <string name="location_dialog_message">Do you want enable GPS?</string>
    <string name="location_disable">Location disable</string>

</resources>