<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/location">

        <ListPreference
            android:defaultValue="3000"
            android:entries="@array/location_time_update_name"
            android:entryValues="@array/location_time_update_value"
            android:key="update_time_key"
            android:title="@string/update_time"
            app:icon="@drawable/ic_update_time"
            app:summary="@string/update_time_summary" />

        <ListPreference
            android:defaultValue="#FF0A4481"
            android:entries="@array/color_name"
            android:entryValues="@array/color_value"
            android:key="color_key"
            android:title="@string/update_color"
            app:icon="@drawable/ic_circle"
            app:summary="@string/update_color_of_track_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Web Settings">

        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="127.0.0.1:5000"
            android:key="server_ip"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Server IP"
            app:icon="@drawable/ic_connect_to_server" />
        <EditTextPreference
            android:defaultValue="60"
            android:key="time_to_send_data_on_server"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Interval time sending data (sec.)"
            app:icon="@drawable/ic_interval_data_send" />
    </PreferenceCategory>
</PreferenceScreen>